--- a/env.example
+++ b/env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_KEY=base64:hkzbARNwNx6SFphF6gFGOikV8Y/v88ELf3UQgWY0yh8=
+APP_URL=http://e-asia.kz/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=easiakz_laravel
+DB_USERNAME=easiakz_laravel
+DB_PASSWORD=3[m2uR0@#^85
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
