--- a/env.example
+++ b/env.example
@@ -19,8 +19,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mail.ru
+MAIL_PORT=465
+MAIL_USERNAME=demigod96@bk.ru
+MAIL_FROM=demigod96@bk.ru
+MAIL_TO=demigod96@bk.ru
+MAIL_PASSWORD=Rjcfyjcnhf
+MAIL_ENCRYPTION=ssl
+MAIL_SUBJECT='Письмо с сайта e-asia.kz'
