Для размещения на сервере. Добавлены квартиры

--- a/env.example
+++ b/env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
-APP_DEBUG=true
+APP_DEBUG=false
 APP_KEY=base64:hkzbARNwNx6SFphF6gFGOikV8Y/v88ELf3UQgWY0yh8=
 APP_URL=http://e-asia.kz/
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=srv-pleskdb17
 DB_PORT=3306
-DB_DATABASE=easiakz_laravel
-DB_USERNAME=easiakz_laravel
-DB_PASSWORD=3[m2uR0@#^85
+DB_DATABASE=easiakz_laravel_db
+DB_USERNAME=easia_user
+DB_PASSWORD=&7w4o8Es
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -19,11 +19,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mail.ru
+MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=465
-MAIL_USERNAME=demigod96@bk.ru
-MAIL_FROM=demigod96@bk.ru
-MAIL_TO=demigod96@bk.ru
-MAIL_PASSWORD=Rjcfyjcnhf
+MAIL_USERNAME=info@e-asia.kz
+MAIL_FROM=info@e-asia.kz
+MAIL_TO=info@e-asia.kz
+MAIL_PASSWORD=J@5i3$Im5&1fG
 MAIL_ENCRYPTION=ssl
 MAIL_SUBJECT='Письмо с сайта e-asia.kz'
