--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,8 +3,9 @@
         Options -MultiViews
     </IfModule>
 
-    RewriteEngine On
+    Header set Cache-Control "max-age=604800, public"
 
+    RewriteEngine On
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
